# Alsa-Demo

./: README.md  file_process.h  interface.h
duplexDemo1/: CMakeLists.txt  file_process.h  interface.h  main.c
duplexDemo2/: file_process.c  main.cc
playfile/: CMakeLists.txt  main.c  test.pcm
